--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/wwwroot/assets/css/components/appnotification.css
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/wwwroot/assets/css/components/appnotification.css
@@ -58,8 +58,7 @@
     font-size: 1rem;
     font-weight: 500;
     height: 30px;
-    letter-spacing: -0.02em;
-    line-height: 1.25em;
+    line-height: 2rem;
     position: relative;
     text-align: center;
 }
