--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Shared/Components/AppNotification/AppNotificationComponent.razor
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Shared/Components/AppNotification/AppNotificationComponent.razor
@@ -1,8 +1,15 @@
 <button class="appnotification-badge rz-sidebar-toggle @(IsVisibleContainer ? "active" : string.Empty)" @onclick="ShowContainer">
-    <RadzenIcon class="rzi d-flex align-items-center" Icon="notifications" />
+    @if (HasUnreadAppNotifications)
+    {
+        <RadzenIcon class="rzi d-flex align-items-center rz-color-warning-light" Icon="notifications_active" />
+    }
+    else
+    {
+        <RadzenIcon class="rzi d-flex align-items-center" Icon="notifications" />
+    }
 </button>
 
-@if(IsVisibleContainer)
+@if (IsVisibleContainer)
 {
     <div class="appnotification-container-overlay" @onclick="HideContainer"></div>
 
@@ -11,12 +18,12 @@
             @StringLocalizer["AppNotification_Header"]
         </div>
 
-        @if(IsLoading)
+        @if (IsLoading)
         {
             <div class="appnotification-spinner"></div>
         }
 
-        @if(IsVisibleList)
+        @if (IsVisibleList)
         {
             <AppNotificationListComponent
                 AppNotifications="AppNotifications"
@@ -25,14 +32,14 @@
             </AppNotificationListComponent>
         }
 
-        @if(IsEmptyList)
+        @if (IsEmptyList)
         {
             <div class="appnotification-empty">
                 @StringLocalizer["AppNotification_Empty"]
             </div>
         }
 
-        @if(IsFailedConnection)
+        @if (IsFailedConnection)
         {
             <div class="appnotification-sync-problem">
                 <i class="rzi">sync_problem</i>
