NotificationCenterComponent page in ClinicManagement.BlazorClient.Client #25

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/wwwroot/assets/css/styles.css
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/wwwroot/assets/css/styles.css
@@ -175,3 +175,16 @@
   float: left;
   position: relative;
 }
+
+/* Notification Center */
+.notificationcenter-filter {
+  display: flex;
+}
+
+.notificationcenter-filter div {
+  display: inline-flex;
+}
+
+.notificationcenter-filter div>* {
+  cursor: pointer;
+}
