Navigate to NotificationCenter when user gets from AppNotificationComponent in ClinicManagement.BlazorClient.Client #25

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Shared/Components/AppNotification/AppNotificationComponent.razor
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Shared/Components/AppNotification/AppNotificationComponent.razor
@@ -46,7 +46,7 @@
             </div>
         }
 
-        <div class="appnotification-footer">
+        <div class="appnotification-footer" @onclick="OnClickFooter">
             @StringLocalizer["AppNotification_Footer"]
         </div>
     </div>
