--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/assets/css/styles.css
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/assets/css/styles.css
@@ -6,6 +6,7 @@
 /* Import the Radzen CSS files */
 @import './styles-generated.css';
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+@import url('components/appnotification.css');
 @import url('components/customcard.css');
 @import url('components/language.css');
 @import url('components/search-input-text.css');
@@ -183,4 +184,17 @@
   background-color: #3B467E;
   height: 100%;
   padding: 3rem;
+}
+
+/* Topbar */
+.topbar-container {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  z-index: 1;
+}
+
+.topbar-menu {
+  float: left;
+  position: relative;
 }
