NotificationCenterComponent page in Scheduling.BlazorClient.Client #25

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/assets/css/styles.css
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/assets/css/styles.css
@@ -198,3 +198,16 @@
   float: left;
   position: relative;
 }
+
+/* Notification Center */
+.notificationcenter-filter {
+  display: flex;
+}
+
+.notificationcenter-filter div {
+  display: inline-flex;
+}
+
+.notificationcenter-filter div>* {
+  cursor: pointer;
+}
