--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Pages/Clients/ClientDetailNotification.razor
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Pages/Clients/ClientDetailNotification.razor
@@ -92,6 +92,29 @@
             </RadzenText>
         </div>
 
+        <div class="col-12">
+            <RadzenText
+                Class="rz-color-primary-light"
+                Text=@StringLocalizer["ClientDetailNotification_Label_PreferredLanguage"]
+                TextStyle="TextStyle.Overline">
+            </RadzenText>
+
+            <RadzenText
+                TextStyle="TextStyle.Body1">
+                @switch (Model.PreferredLanguage)
+                {
+                    case (int)Models.Clients.PreferredLanguage.English:
+                        <b>@StringLocalizer["ClientDetailNotification_PreferredLanguage_English"]</b>
+                        break;
+                    case (int)Models.Clients.PreferredLanguage.Spanish:
+                        <b>@StringLocalizer["ClientDetailNotification_PreferredLanguage_Spanish"]</b>
+                        break;
+                    default:
+                        throw new ArgumentException($"Not found {nameof(Model.PreferredLanguage)} with value {Model.PreferredLanguage}");
+                }
+            </RadzenText>
+        </div>
+
         @if(!string.IsNullOrEmpty(Model.PreferredDoctorFullName))
         {
             <div class="col-12">
