--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/assets/css/components/spinner.css
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/assets/css/components/spinner.css
@@ -31,7 +31,7 @@
     top: 0;
     bottom: 0;
     z-index: 9998;
-    background-color: rgba(0,0,0,0.1);
+    background-color: rgba(0, 0, 0, 0.01);
 }
 
 .spinner-overlay .spinner-border {
