Doctors page in Scheduling.BlazorClient.Client #36
Set MaxLength as 200 for custom RadzenTextBoxSearchComponent

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/Doctors/Doctors.razor
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/Doctors/Doctors.razor
@@ -25,6 +25,7 @@
                     @onkeyup=@OnKeyUpFilterSearch
                     AutoComplete="false"
                     Click=@OnClickFilterSearch
+                    MaxLength="200"
                     Placeholder=@StringLocalizer["Doctors_Grid_Filter_PlaceHolder_Search"]>
                 </RadzenTextBoxSearchComponent>
 
