Rooms page in Scheduling.BlazorClient.Client #36
Set MaxLength as 200 for custom RadzenTextBoxSearchComponent

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/Rooms/Rooms.razor
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/Rooms/Rooms.razor
@@ -26,6 +26,7 @@
                     @onkeyup=@OnKeyUpFilterSearch
                     AutoComplete="false"
                     Click=@OnClickFilterSearch
+                    MaxLength="200"
                     Placeholder=@StringLocalizer["Rooms_Grid_Filter_PlaceHolder_Search"]>
                 </RadzenTextBoxSearchComponent>
 
