AppointmentDetailNotification in Scheduling.BlazorClient.Client #36
Load default patient photo data in case that comes nullable

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/Appointments/AppointmentDetailNotification.razor
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/Pages/Appointments/AppointmentDetailNotification.razor
@@ -43,7 +43,7 @@
         <div class="col-12 col-md-6 mb-2 d-flex">
             <RadzenImage
                 Class="appointment-detail-image"
-                Path=@($"data:image/png;base64,{Model.PatientPhotoBase64Encoded}")>
+                Path=@($"data:image/png;base64,{PatientPhotoBase64Encoded}")>
             </RadzenImage>
 
             <div>
