--- a/Identity/src/Presentation/Fnunez.VeterinaryClinic.Identity.Api/Pages/Shared/_Nav.cshtml
+++ b/Identity/src/Presentation/Fnunez.VeterinaryClinic.Identity.Api/Pages/Shared/_Nav.cshtml
@@ -1,9 +1,9 @@
 @using Duende.IdentityServer.Extensions
 @{
-    string name = string.Empty;
+    string? name = null;
     if (!true.Equals(ViewData["signed-out"]))
     {
-        name = Context.User?.GetDisplayName()!;
+        name = Context.User?.GetDisplayName();
     }
 }
 
