--- a/Identity/src/Presentation/Fnunez.VeterinaryClinic.Identity.Api/Pages/Account/Login/Index.cshtml
+++ b/Identity/src/Presentation/Fnunez.VeterinaryClinic.Identity.Api/Pages/Account/Login/Index.cshtml
@@ -11,7 +11,7 @@
 
     <div class="row">
 
-        @if (Model.View.EnableLocalLogin)
+        @if (Model?.View?.EnableLocalLogin == true)
         {
             <div class="col-sm-6">
                 <div class="card">
@@ -25,7 +25,7 @@
 
                             <div class="form-group">
                                 <label asp-for="Input.Username"></label>
-                                <input class="form-control" placeholder="Username" asp-for="Input.Username" autocomplete="off" autofocus id="inputUsername">
+                                <input class="form-control" placeholder="Username" asp-for="Input.Username" autofocus autocomplete="off" id="inputUsername">
                             </div>
                             <div class="form-group">
                                 <label asp-for="Input.Password"></label>
@@ -52,7 +52,7 @@
             </div>
         }
 
-        @if (Model.View.VisibleExternalProviders.Any())
+        @if (Model?.View?.VisibleExternalProviders.Any() == true)
         {
             <div class="col-sm-6">
                 <div class="card">
@@ -78,7 +78,7 @@
             </div>
         }
 
-        @if (!Model.View.EnableLocalLogin && !Model.View.VisibleExternalProviders.Any())
+        @if (Model?.View?.EnableLocalLogin == false && Model?.View?.VisibleExternalProviders.Any() == false)
         {
             <div class="alert alert-warning">
                 <strong>Invalid login request</strong>
