--- a/Identity/src/Presentation/Fnunez.VeterinaryClinic.Identity.Api/Pages/Ciba/Consent.cshtml
+++ b/Identity/src/Presentation/Fnunez.VeterinaryClinic.Identity.Api/Pages/Ciba/Consent.cshtml
@@ -5,15 +5,12 @@
 
 <div class="ciba-consent">
     <div class="lead">
-        @if (Model != null && Model.View != null && Model.View.ClientLogoUrl != null)
+        @if (Model?.View?.ClientLogoUrl != null)
         {
             <div class="client-logo"><img src="@Model.View.ClientLogoUrl"></div>
         }
         <h1>
-            @if (Model != null && Model.View != null)
-            {
-                @Model?.View?.ClientName
-            }
+            @Model?.View?.ClientName
             <small class="text-muted">is requesting your permission</small>
         </h1>
         
@@ -32,7 +29,7 @@
         <input type="hidden" asp-for="Input.Id" />
         <div class="row">
             <div class="col-sm-8">
-                @if (Model != null && Model.View != null && Model.View.IdentityScopes.Any())
+                @if (Model?.View?.IdentityScopes.Any() == true)
                 {
                     <div class="form-group">
                         <div class="card">
@@ -50,7 +47,7 @@
                     </div>
                 }
 
-                @if (Model != null && Model.View != null && Model.View.ApiScopes.Any())
+                @if (Model?.View?.ApiScopes.Any() == true)
                 {
                     <div class="form-group">
                         <div class="card">
@@ -88,7 +85,7 @@
                 <button name="Input.button" value="no" class="btn btn-secondary">No, Do Not Allow</button>
             </div>
             <div class="col-sm-4 col-lg-auto">
-                @if (Model != null && Model.View != null && Model.View.ClientUrl != null)
+                @if (Model?.View?.ClientUrl != null)
                 {
                     <a class="btn btn-outline-info" href="@Model.View.ClientUrl">
                         <span class="glyphicon glyphicon-info-sign"></span>
